web/htdocs/themes/facelift/scss/_wato.scss
/* ... */
div#fixall_container {
  background-color: $headline-color;
  border-radius: 2px;
  overflow: hidden;

  img {
    margin-left: $spacing;
  }

  ul {
    display: inline-block;
    list-style: none;
    margin: 15px 0 15px 0;
    padding-left: $spacing;
  }

  li {
    display: inline-block;
    padding: 0 $spacing;
    border-right: 1px solid $font-color;
  }

  li:last-child {
    border-right: none;
  }

  a {
    text-decoration: none;

    &:hover {
      opacity: 0.5;
    }
  }

  span {
    padding: 2px;
  }

  span.changed {
    color: $font-color-green;
    font-weight: $font-weight-bold;
  }
}

table.data tr.data > td.bulkactions {
  background: transparent;
  border: none;
}

a.service_button.disabled,
span > img.service_button.disabled {
  &:not(.tooltip) {
    pointer-events: none;
  }

  cursor: default;
  filter: grayscale(100%);
  -webkit-filter: grayscale(100%);
  -moz-filter: grayscale(100%);
  -ms-filter: grayscale(100%);
  -o-filter: grayscale(100%);
  -webkit-filter: grayscale(1);
}

.wato table.data tr.data td.bulksearch {
  padding-right: 0;
  white-space: nowrap;

  div.togglebutton.checkbox {
    margin-left: 0;
  }
}

table.data tr.data > td.bulksearch {
  background: transparent;
  border: none;

  div.togglebutton.checkbox {
    display: inline-block;
    width: 32px;
    height: 32px;
    margin-top: 7px;
    margin-right: 8px;
  }
}

.wato td.bulksearch {
  input[type="text"] {
    width: 150px;
    margin-right: 5px;
  }

  .togglebutton {
    margin-bottom: 0;
  }

  input.text,
  select.text,
  textarea.text,
  .text#mk_side_search_field {
    width: auto;
  }
}

table.data tr.data > td.bulksearch div.togglebutton.checkbox a,
table.data tr.data > td.bulksearch div.togglebutton.checkbox body.main .popup_menu span,
body.main .popup_menu table.data tr.data > td.bulksearch div.togglebutton.checkbox span {
  height: 24px;
  padding: 1.5px;
  box-sizing: border-box;
}

.wato div.floatfolder {
  position: relative;
  left: -14px;
  float: left;
  width: 180px;
  height: 140px;
  background-image: url("images/folder_closed.png");
  background-position: top left;
  background-repeat: no-repeat;

  .autherr {
    position: absolute;
    top: 28px;
    right: 19px;
    z-index: 500;
  }

  div.infos img {
    position: relative;
    top: -1px;
    width: 14px;
    height: 14px;
  }

  .edit {
    position: absolute;
    top: 20px;
    right: 47px;
  }

  div.popup_trigger {
    position: absolute;
    top: 20px;
    right: 25px;
  }

  .delete {
    position: absolute;
    top: 20px;
    right: 3px;
  }

  .infos {
    position: absolute;
    right: 24px;
    bottom: 24px;
    left: 24px;
    overflow: hidden;

    .infos_content {
      right: 0;
      left: 0;
      overflow: hidden;
      color: $font-color-white;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
  }

  &.open {
    background-image: url("images/folder_open.png");

    .infos {
      height: 50px;

      .infos_content {
        position: absolute;
        bottom: 0;
      }
    }
  }

  .title {
    position: absolute;
    right: 20px;
    bottom: -4px;
    left: 20px;
    padding: 0;
    overflow: hidden;
    color: $font-color-white;
    text-align: left;
    text-overflow: ellipsis;
    white-space: nowrap;
    -o-text-overflow: ellipsis;

    a {
      position: relative;
      top: -2px;
      text-decoration: none;
    }
  }

  &:hover {
    cursor: pointer;

    a {
      text-decoration: underline;
    }
  }

  &.newfolder {
    font-size: 80px;
    line-height: 145px;
    color: $font-color-light-grey;
    text-align: center;
    opacity: 0.4;
  }
}

.wato div.floatfolder div.title a,
.wato div.floatfolder div.title body.main .popup_menu span,
body.main .popup_menu .wato div.floatfolder div.title span,
.wato div.floatfolder.locked div.title {
  font-weight: $font-weight-default;
  color: $font-color;
}

.wato img.authicon {
  width: 28px;
  height: 28px;
  margin-right: 10px;
  vertical-align: middle;
}

.wato div.popup_menu {
  min-width: 137px;

  select {
    height: auto;
  }
}

.wato div.hoverarea {
  position: relative;
  top: 4px;
  left: 10px;
  z-index: 100;
  width: 154px;
  height: 40px;
}

.wato div.folder_foot {
  margin-bottom: 10px;
  clear: left;
}

/* Controls for the audit log paged mechanism */
.wato div.paged_controls {
  position: relative;
  top: 3px;
  float: right;
}

.wato img.trans {
  width: 20px;
  height: 13px;
}

.wato td.value img {
  width: 20px;
  height: 20px;
}

.wato ul.conditions {
  padding: 0;
  list-style-type: square;

  li {
    padding: 0;
    margin: 0;

    &.no_conditions {
      color: $font-color-dimmed;
    }
  }

  tags {
    display: inline-block;
    padding: 0 2px;

    &.tagify.display[readonly] tag {
      padding: 0;
      margin-right: 0;

      div {
        margin: 0;
      }
    }
  }

  .label_operator {
    display: inline-block;
    padding: 0 2px;
  }
}

.wato form.rule_editor {
  table.hosttags td.title {
    min-width: 200px;
  }

  td.tag_sel {
    display: table-cell;
    vertical-align: middle;

    > div {
      white-space: nowrap;
    }
  }
}

.wato table.itemlist td {
  padding: 0;
  margin: 0;
}

span.tagify__tag-text {
  white-space: pre;
}

.wato table.data.ruleset {
  td.condition,
  td.value,
  td.description {
    min-width: 30%;
  }

  tr.disabled td {
    * {
      color: $font-color-dimmed;
    }

    .tagify__tag-text {
      color: inherit;
    }

    tag > div {
      opacity: 0.5;
    }
  }
}

table.data.oddeven > tbody > .matches_search > td {
  background-color: $matches-search-bg-color;

  &.buttons {
    border-radius: 0;
  }
}

/* Special styling for Timeperiods editor */
.wato table.timeperiod td.name {
  width: 195px;
}

form#form_timeperiod td.vlof_content {
  background-image: none;

  input.text:first-child {
    width: 189px;
    margin-right: 4px;
  }
}

/* Value editor */
.wato pre.ve_textarea {
  margin: 0;
}
/* ... */

